<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="share">Share</string>
    <string name="show_detail">App Detail</string>
    <string name="show_store">Store</string>
    <string name="sort_alphabet">Alphabetical</string>
    <string name="sort_install">Install</string>
    <string name="sort">Sort</string>
    <string name="loading">loading</string>
    <string name="error_store_uninstalled">Not Such Google Play</string>
    <string name="error_opne_failed">Open Failed</string>
    <string name="select_type">Select Type</string>
    <string name="setting">Setting</string>
    <string name="appinfo">About</string>
    <string name="version">AppRoom v%s</string>
    <string name="creater">created by &lt;a href="http://twitter.com/y_megane">@y_megane&lt;/a></string>
    <string name="oss">Open Source Software</string>
    <string name="zxing_name">・&lt;a href="http://code.google.com/p/zxing/">ZXing&lt;/a></string>
    <string name="nfcfelica_name">・&lt;a href="http://code.google.com/p/nfc-felica/">nfc-felica&lt;/a></string>
    <string name="gson_name">・&lt;a href="https://code.google.com/p/google-gson/">google-gson&lt;/a></string>
    <string name="otto_name">・&lt;a href="http://square.github.io/otto/">Otto&lt;/a></string>
    <string name="butterknife_name">・&lt;a href="https://github.com/JakeWharton/butterknife">Butter Knife&lt;/a></string>
    <string name="picasso_name">・&lt;a href="http://square.github.io/picasso/">Picasso&lt;/a></string>
    <string name="apache_license">&lt;a href="http://www.apache.org/licenses/">Apache License Version 2.0&lt;/a></string>
    <string name="touch_enable">You can send in touch</string>
    <string name="action_mode_title_share">Share apps</string>
    <string name="action_mode_subtitle_share">selected:%d</string>
    <string name="search">Search</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>